Ignore tex files

--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,7 @@ TSWLatexianTemp*
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
 *.mp4
+Final Project/paper/Example.pdf
+Final Project/paper/Example.tex
+Final Project/paper/IEEEtran.cls
+Final Project/paper/458.tex
